# NCUMA-DS-final

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/: imu_data_stational.bag
launch/: main.launch
scripts/: AttitudeEstimation.py  cal_R.py  ekf.py  mag_calibration.py  mag_visualizer.py  mouse_control.py
